--- a/client/package.json
+++ b/client/package.json
@@ -56,7 +56,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "https://hatchway-team-beagle.herokuapp.com/",
   "browserslist": {
     "production": [
       ">0.2%",
